# static_vcruntime

./: Cargo.toml  LICENSE  LICENSE-ZLIB  Readme.md  build.rs
example/: Cargo.toml
examples/: hello.rs
src/: lib.rs
