[package]
name = "static_vcruntime"
description = "Statically link the VCRuntime when using the MSVC toolchain."
version = "3.0.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/ChrisDenton/static_vcruntime"
keywords = ["windows", "msvc", "vcruntime"]
# I think build-utils is the closest match but this shouldn't be used in a build script.
categories = ["development-tools::build-utils", "no-std"]
exclude = [
    "example/*"
]
rust-version = "1.79"
